# django-jet

./: README.md  old.readme.rst  pyproject.toml  setup.py
jet/: __init__.py
