[tool.poetry]
name = "cifrazia-django-jet"
version = "1.1.0"
description = "Django-jet fork with Django@3.0+ support"
authors = ["Bogdan Parfenov <adam.brian.bright@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "~3.8"
Django = "^3.2"
six = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
